--- a/promise/index.html
+++ b/promise/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <div id="time"></div>
 </body>
 <script type="module" src="index.js"></script>
 </html>
