--- a/class/index.html
+++ b/class/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="demo"></div>
 </body>
 <script type="module" src="index.js"></script>
+<script type="module" src="inheritance.js"></script>
 </html>
